--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           <div class="query-fields">
             <div class="query-field">
               <label id="question-label-1" for="prompt-input-1"
-                >1. What opportunities do you want to explore in this
+                >What opportunities do you want to explore in this
                 design?</label
               >
               <textarea
@@ -33,7 +33,7 @@
 
             <div class="query-field">
               <label id="question-label-2" for="prompt-input-2"
-                >2. What challenges do you think you will face?</label
+                >What challenges do you think you will face?</label
               >
               <textarea
                 id="prompt-input-2"
@@ -44,7 +44,7 @@
 
             <div class="query-field">
               <label id="question-label-3" for="prompt-input-3"
-                >3. What problem are you trying to solve in this design?</label
+                >What problem are you trying to solve in this design?</label
               >
               <textarea
                 id="prompt-input-3"
@@ -64,7 +64,7 @@
 
         <div class="responses-grid">
           <div class="response-column">
-            <h2>Inclusive Design practice</h2>
+            <h2>Inclusive Design Practice</h2>
             <p class="kb-description">Methods and Practices</p>
             <div id="response-kb1" class="response-container"></div>
           </div>
