Updated commented code

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <button class="tab" data-tab="settings">System Settings</button>
       </div>
 
+      <!--  User interface query section -->
       <div id="query-tab" class="tab-content active">
         <div class="input-section">
           <div class="query-fields">
@@ -83,6 +84,7 @@
         </div>
       </div>
 
+      <!--  User interface settings / system section -->
       <div id="settings-tab" class="tab-content">
         <div class="general-system-prompt-section">
           <h2>General System Prompt</h2>
@@ -140,6 +142,7 @@
         </div>
       </div>
 
+      <!--  User interface knowledge base management section -->
       <div id="manage-tab" class="tab-content">
         <div class="knowledge-selector">
           <label for="kb-select">Select Knowledge Base:</label>
@@ -213,7 +216,9 @@
         </div>
       </div>
     </div>
+    <!-- end of container -->
 
+    <!-- load JavaScript -->
     <script src="script.js"></script>
   </body>
 </html>
